--- a/css/main.scss
+++ b/css/main.scss
@@ -441,11 +441,11 @@ transition: .7s;
         margin: 0;
         padding: 0;
         $home_img: url('../images/bg final11.png');
-        $tree1_img: url('../images/tree-1.png');
-        $tree2: url('./images/tree2.png');
+      
         $bullet: url('../images/path16.png');
         $arrow: url('../images/arrow.svg');
         $arrow1: url('../images/arrow1.svg');
+        $tree1: url('../images/tree1.png');
         .mobilediv{display: none;}
         
         
@@ -495,7 +495,7 @@ transition: .7s;
                 color:  #20122B;
                 font-family: 'Lato';
                 font-weight: 700;
-                font-size: 35px; 
+                font-size: 3vw; 
                 letter-spacing:-1px;
         
             }
@@ -504,7 +504,7 @@ transition: .7s;
                 color:  #20122B;
                 font-family: 'Lato';
                 font-weight:500;
-                font-size:0.8em; 
+                font-size:1vw; 
                 line-height: 16px;
         
             }
@@ -655,22 +655,11 @@ transition: .7s;
         transform: rotate(225deg);
         z-index: 1;
         }
-        .normal{  
-                right: 0px;  
-                height: 100vh; 
-                width: 100vw;  
-                z-index: 1;     
-        }
-        .normal2{  
-            left: 0px;    
-            height: 100vh; 
-            width: 100vw;  
-            z-index: 1;                
-            }
+   
         .img{
         transform: translateX(-720px);
         transition: all 1.6s ease;
-        
+        height: 100vh;width: 100vw;
         //transition-delay: 300ms;
         
         }
@@ -678,6 +667,7 @@ transition: .7s;
         .img2{
         transform: translateX(640px);
         transition: all 1.6s ease;
+        height: 100vh;width: 100vw;
         // transition-delay: 300ms;
         
         }
@@ -728,7 +718,7 @@ transition: .7s;
             color: white;
             font-family: 'Momcake Pro';
             font-weight: bold;
-            font-size: 60px;
+            font-size: 5vw;
         }
         
         .crth2{
@@ -736,15 +726,16 @@ transition: .7s;
             color: white;
             font-family: 'Momcake Pro';
             font-weight: bold;
-            font-size: 40px;
+            font-size: 3vw;
         
         }
         .trees{
-            width: 100%;
+            width: 100vw;
              height:100vh;
-          overflow: hidden;
+          //overflow: hidden;
                z-index: 1;
         }
+      
         
         .swiperr{
             display: none;
@@ -753,7 +744,7 @@ transition: .7s;
         
             color: white;
             font-family: 'Momcake Pro';
-            font-size: 15px;
+            font-size: 1vw;
         }
         
         .crth4{
@@ -812,13 +803,9 @@ transition: .7s;
      
         }
        
-        @media (device-width:1440px){
-            #img{
-                width:78vw;
-            }
-            #img2{
-                width:78vw;
-            }
+        @media (min-width:1440px){
+           
+            
             .img{
                 margin-right: 80px;
             }
@@ -833,7 +820,7 @@ transition: .7s;
           
           }
             .sets{
-                padding-left: 70px;
+             //   padding-left: 70px;
                 
             }
             .frame{
@@ -845,12 +832,12 @@ transition: .7s;
            
         }
         @media screen  and(device-width: 1024px){
-            .trees{ display: none;}
         
              .sets{
-                 padding-left: 10px;
-          
+                margin: 3vw;
+                padding: 0;
              }
+             
             
               .arrow2{
                
