--- a/css/main.css
+++ b/css/main.css
@@ -35,19 +35,26 @@
   .d-no {
     display: none;
   }
-  body {
+  html, body {
     height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   .mobilediv {
     -ms-scroll-snap-type: y mandatory;
         scroll-snap-type: y mandatory;
     overflow-y: scroll;
-    height: 100vh;
     z-index: 10000;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
   }
   .mobilediv .onsbmt {
     display: none;
