--- a/css/main.scss
+++ b/css/main.scss
@@ -60,19 +60,26 @@ font-display: swap;
         display: none;
     }
     
-    body{
+    html,body{
         height: 100vh;
         width: 100vw;
         margin: 0;
-        padding: 0;}
+        padding: 0;
+    overflow-x: hidden;}
 
         .mobilediv{
             scroll-snap-type: y mandatory;
             overflow-y: scroll;
-            height: 100vh;
             z-index: 10000;
+            height: 100%;
+            width: 100%;
+        margin: 0;
+        padding: 0;
+    overflow-x: hidden;
+
             scroll-behavior: smooth;
-    
+            margin: 0;
+            padding: 0;
             .onsbmt{
                 display: none;
             }
