--- a/css/main.css
+++ b/css/main.css
@@ -87,22 +87,25 @@ body {
     background-color: #20112b;
   }
   .mobilediv .open .bar1 {
-    transform: rotate(-40deg) translate(-9px, 6px);
+    transform: rotate(-50deg) translate(-9px, 6px);
   }
   .mobilediv .open .bar2 {
     opacity: 0;
   }
   .mobilediv .open .bar3 {
-    transform: rotate(40deg) translate(-11px, -8px);
+    transform: rotate(50deg) translate(-11px, -8px);
   }
   .mobilediv nav {
     width: 100vw;
     padding: 0;
     margin: 0;
   }
+  .mobilediv .swiper-pagination-bullet-active {
+    background-color: white;
+  }
   .mobilediv .hamburger {
     display: block;
-    z-index: 1000;
+    z-index: 1;
     margin-left: auto;
     transition: 0.4s;
   }
@@ -120,7 +123,6 @@ body {
     top: 0;
   }
   .mobilediv .nav-link {
-    margin-top: 5vw;
     text-align: center;
     font-family: "Lato";
     font-weight: 400;
@@ -132,46 +134,83 @@ body {
     position: relative;
     scroll-snap-align: start;
   }
-  .mobilediv .sec1 {
-    background-image: url("../images/bg1.png");
-    background-size: 100vw 100vh;
-    -webkit-background-size: 100vw 100vh;
-    background-position: center;
-    background-attachment: fixed;
+  @supports (-webkit-touch-callout: none) {
+    .mobilediv .sec1 {
+      background-image: url("../images/bg1.png");
+      background-size: 100vw 100vh;
+      -webkit-background-size: 100vw 100vh;
+      background-position: center;
+    }
+    .mobilediv .sec2 {
+      background-image: url("../images/bg2.png");
+      background-size: cover;
+      background-position: center;
+    }
+    .mobilediv .sec3 {
+      background-image: url("../images/bg3.png");
+      background-size: 100vw 100vh;
+      background-position: center;
+    }
+    .mobilediv .sec4 {
+      background-image: url("../images/bg4.png");
+      background-size: 100vw 100vh;
+      background-position: center;
+    }
   }
-  .mobilediv .sec2 {
-    background-image: url("../images/bg2.png");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-  }
-  .mobilediv .sec3 {
-    background-image: url("../images/bg3.png");
-    background-size: 100vw 100vh;
-    background-position: center;
-    background-attachment: fixed;
-  }
-  .mobilediv .sec4 {
-    background-image: url("../images/bg4.png");
-    background-size: 100vw 100vh;
-    background-position: center;
-    background-attachment: fixed;
+  @supports not (-webkit-touch-callout: none) {
+    .mobilediv {
+      /* CSS for other than iOS devices */
+    }
+    .mobilediv .sec1 {
+      background-image: url("../images/bg1.png");
+      background-size: 100vw 100vh;
+      -webkit-background-size: 100vw 100vh;
+      background-position: center;
+      background-attachment: fixed;
+    }
+    .mobilediv .sec2 {
+      background-image: url("../images/bg2.png");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+    .mobilediv .sec3 {
+      background-image: url("../images/bg3.png");
+      background-size: 100vw 100vh;
+      background-position: center;
+      background-attachment: fixed;
+    }
+    .mobilediv .sec4 {
+      background-image: url("../images/bg4.png");
+      background-size: 100vw 100vh;
+      background-position: center;
+      background-attachment: fixed;
+    }
   }
   .mobilediv .swiper {
     width: 100vw;
-    padding-bottom: 50px;
   }
   .mobilediv .swiper-slide {
-    width: 100vw;
-    height: auto;
+    height: 100%;
+    display: list-item;
+    width: 100%;
+    padding-bottom: 2em;
+    margin: 0;
     filter: opacity(0.2);
   }
   .mobilediv .swiper-slide-active {
     filter: opacity(1);
   }
+  .mobilediv .swiper-wrapper {
+    height: auto;
+    position: relative;
+  }
   .mobilediv .swiper-3d .swiper-slide-shadow-right,
 .mobilediv .swiper-3d .swiper-slide-shadow-left {
     background-image: none;
+  }
+  .mobilediv .swiper-pagination-bullet {
+    background-color: rgba(255, 255, 255, 0.7);
   }
   .mobilediv .swiper-pagination-bullet-active {
     background-color: white;
@@ -193,7 +232,7 @@ body {
     color: #20122b;
     font-family: "Lato";
     font-weight: 900;
-    font-size: 10.5vw;
+    font-size: 8vw;
     text-align: center;
   }
   .mobilediv .text2 {
@@ -201,8 +240,10 @@ body {
     color: #20122b;
     font-family: "Lato";
     font-weight: 400;
-    font-size: 3.5vw;
+    font-size: 3.2vw;
     line-height: 1.2em;
+    letter-spacing: -0.1px;
+    white-space: nowrap;
   }
   .mobilediv .sbmt {
     align-items: center;
@@ -545,13 +586,13 @@ body {
     z-index: 1;
   }
   body .container2 .img {
-    transform: translateX(-720px);
+    transform: translateX(-45em);
     transition: all 1.6s ease;
     height: 100vh;
     width: 100vw;
   }
   body .container2 .img2 {
-    transform: translateX(600px);
+    transform: translateX(38em);
     transition: all 1.6s ease;
     height: 100vh;
     width: 100vw;
@@ -666,7 +707,7 @@ body {
 }
 @media screen and (min-width: 961px) and (min-width: 1440px) {
   body .sets1 {
-    padding-left: 8.5vw;
+    padding-left: 7vw;
   }
   body .sets1 .pkgs {
     font-size: 2.5vw;
@@ -674,10 +715,32 @@ body {
   body .sets1 .offers {
     font-size: 1.1vw;
   }
+  body .arrow1 {
+    margin-left: 60px;
+  }
+  body .arrow2 {
+    margin-left: 50px;
+  }
+  body .arrow4 {
+    margin-left: 50px;
+  }
+  body .sets {
+    padding-right: 70px;
+  }
+  body .frame1 {
+    padding-left: 60px;
+  }
 }
-@media screen and (min-width: 961px) and (min-width: 1440px) and (min-width: 2157px) {
+@media screen and (min-width: 961px) and (min-width: 2000px) {
+  body .frame1 {
+    padding-left: 5%;
+  }
+  body .frame {
+    padding-left: 5%;
+    color: red;
+  }
   body .sets1 {
-    padding-left: 19%;
+    padding-left: 13%;
   }
   body .sets1 .pkgs {
     font-size: 2vw;
@@ -685,36 +748,6 @@ body {
   body .sets1 .underline {
     width: auto;
     font-size: 1vw;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .arrow1 {
-    margin-left: 60px;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .arrow2 {
-    margin-left: 50px;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .arrow4 {
-    margin-left: 50px;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .sets {
-    padding-right: 70px;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .frame {
-    padding-left: 90px;
-  }
-}
-@media screen and (min-width: 961px) and (min-width: 1440px) {
-  body .frame1 {
-    padding-left: 60px;
   }
 }
 @media screen and (min-width: 961px) and (min-width: 1024px) and (max-width: 1399px) {
