--- a/css/main.scss
+++ b/css/main.scss
@@ -347,21 +347,21 @@
         .wlc {
             font-family: "Momcake Pro";
             font-weight: bold;
-            font-size: 20vw;
+            font-size: 5em;
             color: #20112b;
         }
 
         .take {
             font-family: "Momcake Pro";
             font-weight: 100;
-            font-size: 10vw;
+            font-size: 2.5em;
         }
 
         .come {
             margin-top: 2rem;
             font-family: "Lato";
             font-weight: 400;
-            font-size: 4vw;
+            font-size: 1em;
         }
 
         .arrow {
