--- a/css/main.css
+++ b/css/main.css
@@ -276,19 +276,19 @@ body {
   .mobilediv .wlc {
     font-family: "Momcake Pro";
     font-weight: bold;
-    font-size: 20vw;
+    font-size: 5em;
     color: #20112b;
   }
   .mobilediv .take {
     font-family: "Momcake Pro";
     font-weight: 100;
-    font-size: 10vw;
+    font-size: 2.5em;
   }
   .mobilediv .come {
     margin-top: 2rem;
     font-family: "Lato";
     font-weight: 400;
-    font-size: 4vw;
+    font-size: 1em;
   }
   .mobilediv .arrow {
     display: grid;
